Feat(user): create register endpoint
